# svd-image-compression-demo

./: .eslintrc.js  .gitignore  .prettierrc.yaml  257.worker.js  257.worker.js.map  LICENSE  README.md  TODO  app.js  build_lapack_emscripten.sh  gulpfile.js  image-svd.js  index.html  jsapi.c  main.js  main.js.LICENSE.txt  main.js.map  package-lock.json  package.json  shell.nix  style.css  svd-benchmark.js  svd-worker.js  svd-worker.worker.js  svd-worker.worker.js.map  tsconfig.json  webpack.config.js
.github/workflows/: main.yml
CLAPACK/: make.inc
SVDLIBC/: Makefile  jsapi.c  las2.c  svdlib.c
js/: image-svd.js  svd-worker.js
jsx/: app.js
nix/: sources.json
public/: index.html
src/: generic-tsconfig.json
src/main-app/: App.tsx  FileInputField.tsx  Gallery.tsx  HoverCanvasView.tsx  ImagePlaceholder.tsx  SingularValuesDiagram.tsx  SingularValuesSlider.tsx  SvdApproximation.tsx  app.tsx  image-svd.ts  index.tsx  rgb.ts  svdComputationManager.ts  tsconfig.json  workerCommunication.ts
src/shared/: svd-worker-protocol.ts  tsconfig.json  types.ts
src/web-worker/: svd-worker.ts  tsconfig.json
svd-image-compression-worker/: .gitignore  Cargo.toml
svd-image-compression-worker/src/: lib.rs  utils.rs
